docs():refact swagger
